# seq2ids

./: .gitignore  Makefile  README.md  blast_docs.txt  blast_example.fasta  download_nt_files.sh  nt_file_list.txt  pyproject.toml  secrets_template.yaml  seq2ids.ini  seq2ids_elastic-blast_header.tsv  seq2ids_under_30.ini
bash/: README.md  pgsql2sqlite.sh
blastdbs/: README.md
data/: fpbase.fasta  sqlite_not_postgres.db
elastic_nt_oriented/: get_gffs.sh
images/: README.md
old/elastic_nt_oriented/: elasticblast_aws_setup.sh
seq2ids/: add_col.py  efetch_features.py  get_blast_dbs_index.py  get_blast_dsb_index.py  get_fluor_prot_seqs.py  get_seqs_from_db.py  get_uniprot_entries.py  one_best_up.py  parts_best_match.py  ranges_to_features.py  ranges_to_features.tsv  seq2ids.py  sqlite_not_postgres.py  worthiness.py
seq2ids/old/: efetch_features.py  feature_frame.tsv  feature_frame.tsv.bak  get_seqs_from_db.py  make_annotation.tables.py  ranges_to_features.py
sql/: b2f_summary.sql  by_attachement.sql  create_blast_results_table.sql  indices.sql  insertion_genome_hsp_counts.sql  insertion_genome_list.sql  insertions_querys_genome_ranking.sql  modifications.sql  part_characterization.sql  parts_partial.sql  parts_up_annotations.sql  r2d_cov_by_ident.sql  ranges_to_download.sql
sql/old/: insertion_genome_hsp_counts.sql  insertions_querys_genome_ranking.sql  part_characterization.sql  parts_sequences_plus.sql  parts_up_annotations.sql  r2d_cov_by_ident.sql  ranges_to_download.sql  smin_smax.sql
